CheckpointThree/y.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | fun_decl
    6     | error

    7 $@1: %empty

    8 var_decl: type_spec ID $@1 SEMI

    9 $@2: %empty

   10 var_decl: type_spec ID $@2 LBRAC NUM RBRAC SEMI

   11 type_spec: INT
   12          | VOID

   13 @3: %empty

   14 fun_decl: type_spec ID @3 LPAREN params RPAREN compound_stmt
   15         | LPAREN error RPAREN compound_stmt

   16 params: param_list
   17       | VOID

   18 param_list: param_list COMMA param
   19           | param
   20           | error

   21 param: type_spec ID

   22 $@4: %empty

   23 param: type_spec ID $@4 LBRAC RBRAC

   24 $@5: %empty

   25 compound_stmt: LCURL $@5 local_decl stmt_list RCURL

   26 local_decl: local_decl var_decl
   27           | error var_decl
   28           | epsilon

   29 stmt_list: stmt_list stmt
   30          | epsilon

   31 stmt: expr_stmt
   32     | compound_stmt
   33     | select_stmt
   34     | iter_stmt
   35     | return_stmt

   36 expr_stmt: expr SEMI
   37          | SEMI

   38 select_stmt: IF LPAREN expr RPAREN stmt
   39            | IF LPAREN expr RPAREN stmt ELSE stmt
   40            | IF LPAREN error RPAREN

   41 iter_stmt: WHILE LPAREN expr RPAREN stmt
   42          | WHILE LPAREN error RPAREN

   43 return_stmt: RETURN SEMI
   44            | RETURN expr SEMI
   45            | RETURN error SEMI

   46 expr: var EQ expr
   47     | simple_expr
   48     | var EQ error

   49 var: ID

   50 $@6: %empty

   51 var: ID $@6 LBRAC expr RBRAC

   52 simple_expr: additive_expr relop additive_expr
   53            | additive_expr
   54            | additive_expr relop error

   55 relop: LTEQ
   56      | LT
   57      | GT
   58      | GTEQ
   59      | DOUBEQ
   60      | NEQ

   61 additive_expr: additive_expr addop term
   62              | term
   63              | additive_expr error

   64 addop: PLUS
   65      | MINUS

   66 term: term mulop factor
   67     | factor
   68     | term mulop error

   69 mulop: MULT
   70      | DIV

   71 factor: LPAREN expr RPAREN
   72       | var
   73       | call
   74       | NUM
   75       | LPAREN error

   76 $@7: %empty

   77 call: ID $@7 LPAREN args RPAREN

   78 args: arg_list
   79     | epsilon
   80     | error

   81 arg_list: arg_list COMMA expr
   82         | expr
   83         | arg_list COMMA error

   84 epsilon: %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 6 15 20 27 40 42 45 48 54 63 68 75 80 83
IF (258) 38 39 40
ELSE (259) 39
INT (260) 11
RETURN (261) 43 44 45
VOID (262) 12 17
WHILE (263) 41 42
ID (264) 8 10 14 21 23 49 51 77
NUM (265) 10 74
PLUS (266) 64
MINUS (267) 65
MULT (268) 69
DIV (269) 70
LT (270) 56
GT (271) 57
LTEQ (272) 55
GTEQ (273) 58
DOUBEQ (274) 59
NEQ (275) 60
EQ (276) 46 48
SEMI (277) 8 10 36 37 43 44 45
COMMA (278) 18 81 83
LPAREN (279) 14 15 38 39 40 41 42 71 75 77
RPAREN (280) 14 15 38 39 40 41 42 71 77
LBRAC (281) 10 23 51
RBRAC (282) 10 23 51
LCURL (283) 25
RCURL (284) 25
ERROR (285)
NO_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
decl_list (34)
    on left: 2 3, on right: 1 2
decl (35)
    on left: 4 5 6, on right: 2 3
var_decl (36)
    on left: 8 10, on right: 4 26 27
$@1 (37)
    on left: 7, on right: 8
$@2 (38)
    on left: 9, on right: 10
type_spec (39)
    on left: 11 12, on right: 8 10 14 21 23
fun_decl (40)
    on left: 14 15, on right: 5
@3 (41)
    on left: 13, on right: 14
params (42)
    on left: 16 17, on right: 14
param_list (43)
    on left: 18 19 20, on right: 16 18
param (44)
    on left: 21 23, on right: 18 19
$@4 (45)
    on left: 22, on right: 23
compound_stmt (46)
    on left: 25, on right: 14 15 32
$@5 (47)
    on left: 24, on right: 25
local_decl (48)
    on left: 26 27 28, on right: 25 26
stmt_list (49)
    on left: 29 30, on right: 25 29
stmt (50)
    on left: 31 32 33 34 35, on right: 29 38 39 41
expr_stmt (51)
    on left: 36 37, on right: 31
select_stmt (52)
    on left: 38 39 40, on right: 33
iter_stmt (53)
    on left: 41 42, on right: 34
return_stmt (54)
    on left: 43 44 45, on right: 35
expr (55)
    on left: 46 47 48, on right: 36 38 39 41 44 46 51 71 81 82
var (56)
    on left: 49 51, on right: 46 48 72
$@6 (57)
    on left: 50, on right: 51
simple_expr (58)
    on left: 52 53 54, on right: 47
relop (59)
    on left: 55 56 57 58 59 60, on right: 52 54
additive_expr (60)
    on left: 61 62 63, on right: 52 53 54 61 63
addop (61)
    on left: 64 65, on right: 61
term (62)
    on left: 66 67 68, on right: 61 62 66 68
mulop (63)
    on left: 69 70, on right: 66 68
factor (64)
    on left: 71 72 73 74 75, on right: 66 67
call (65)
    on left: 77, on right: 73
$@7 (66)
    on left: 76, on right: 77
args (67)
    on left: 78 79 80, on right: 77
arg_list (68)
    on left: 81 82 83, on right: 78 81 83
epsilon (69)
    on left: 84, on right: 28 30 79


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    LPAREN  shift, and go to state 4

    program    go to state 5
    decl_list  go to state 6
    decl       go to state 7
    var_decl   go to state 8
    type_spec  go to state 9
    fun_decl   go to state 10


State 1

    6 decl: error .

    $default  reduce using rule 6 (decl)


State 2

   11 type_spec: INT .

    $default  reduce using rule 11 (type_spec)


State 3

   12 type_spec: VOID .

    $default  reduce using rule 12 (type_spec)


State 4

   15 fun_decl: LPAREN . error RPAREN compound_stmt

    error  shift, and go to state 11


State 5

    0 $accept: program . $end

    $end  shift, and go to state 12


State 6

    1 program: decl_list .
    2 decl_list: decl_list . decl

    error   shift, and go to state 1
    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    LPAREN  shift, and go to state 4

    $end  reduce using rule 1 (program)

    decl       go to state 13
    var_decl   go to state 8
    type_spec  go to state 9
    fun_decl   go to state 10


State 7

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


State 8

    4 decl: var_decl .

    $default  reduce using rule 4 (decl)


State 9

    8 var_decl: type_spec . ID $@1 SEMI
   10         | type_spec . ID $@2 LBRAC NUM RBRAC SEMI
   14 fun_decl: type_spec . ID @3 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 14


State 10

    5 decl: fun_decl .

    $default  reduce using rule 5 (decl)


State 11

   15 fun_decl: LPAREN error . RPAREN compound_stmt

    RPAREN  shift, and go to state 15


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 decl_list: decl_list decl .

    $default  reduce using rule 2 (decl_list)


State 14

    8 var_decl: type_spec ID . $@1 SEMI
   10         | type_spec ID . $@2 LBRAC NUM RBRAC SEMI
   14 fun_decl: type_spec ID . @3 LPAREN params RPAREN compound_stmt

    LPAREN    reduce using rule 13 (@3)
    LBRAC     reduce using rule 9 ($@2)
    $default  reduce using rule 7 ($@1)

    $@1  go to state 16
    $@2  go to state 17
    @3   go to state 18


State 15

   15 fun_decl: LPAREN error RPAREN . compound_stmt

    LCURL  shift, and go to state 19

    compound_stmt  go to state 20


State 16

    8 var_decl: type_spec ID $@1 . SEMI

    SEMI  shift, and go to state 21


State 17

   10 var_decl: type_spec ID $@2 . LBRAC NUM RBRAC SEMI

    LBRAC  shift, and go to state 22


State 18

   14 fun_decl: type_spec ID @3 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 23


State 19

   25 compound_stmt: LCURL . $@5 local_decl stmt_list RCURL

    $default  reduce using rule 24 ($@5)

    $@5  go to state 24


State 20

   15 fun_decl: LPAREN error RPAREN compound_stmt .

    $default  reduce using rule 15 (fun_decl)


State 21

    8 var_decl: type_spec ID $@1 SEMI .

    $default  reduce using rule 8 (var_decl)


State 22

   10 var_decl: type_spec ID $@2 LBRAC . NUM RBRAC SEMI

    NUM  shift, and go to state 25


State 23

   14 fun_decl: type_spec ID @3 LPAREN . params RPAREN compound_stmt

    error  shift, and go to state 26
    INT    shift, and go to state 2
    VOID   shift, and go to state 27

    type_spec   go to state 28
    params      go to state 29
    param_list  go to state 30
    param       go to state 31


State 24

   25 compound_stmt: LCURL $@5 . local_decl stmt_list RCURL

    error  shift, and go to state 32

    IF      reduce using rule 84 (epsilon)
    INT     reduce using rule 84 (epsilon)
    RETURN  reduce using rule 84 (epsilon)
    VOID    reduce using rule 84 (epsilon)
    WHILE   reduce using rule 84 (epsilon)
    ID      reduce using rule 84 (epsilon)
    NUM     reduce using rule 84 (epsilon)
    SEMI    reduce using rule 84 (epsilon)
    LPAREN  reduce using rule 84 (epsilon)
    LCURL   reduce using rule 84 (epsilon)
    RCURL   reduce using rule 84 (epsilon)

    local_decl  go to state 33
    epsilon     go to state 34


State 25

   10 var_decl: type_spec ID $@2 LBRAC NUM . RBRAC SEMI

    RBRAC  shift, and go to state 35


State 26

   20 param_list: error .

    $default  reduce using rule 20 (param_list)


State 27

   12 type_spec: VOID .
   17 params: VOID .

    RPAREN    reduce using rule 17 (params)
    $default  reduce using rule 12 (type_spec)


State 28

   21 param: type_spec . ID
   23      | type_spec . ID $@4 LBRAC RBRAC

    ID  shift, and go to state 36


State 29

   14 fun_decl: type_spec ID @3 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 37


State 30

   16 params: param_list .
   18 param_list: param_list . COMMA param

    COMMA  shift, and go to state 38

    $default  reduce using rule 16 (params)


State 31

   19 param_list: param .

    $default  reduce using rule 19 (param_list)


State 32

   27 local_decl: error . var_decl

    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    var_decl   go to state 39
    type_spec  go to state 40


State 33

   25 compound_stmt: LCURL $@5 local_decl . stmt_list RCURL
   26 local_decl: local_decl . var_decl

    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 84 (epsilon)

    var_decl   go to state 41
    type_spec  go to state 40
    stmt_list  go to state 42
    epsilon    go to state 43


State 34

   28 local_decl: epsilon .

    $default  reduce using rule 28 (local_decl)


State 35

   10 var_decl: type_spec ID $@2 LBRAC NUM RBRAC . SEMI

    SEMI  shift, and go to state 44


State 36

   21 param: type_spec ID .
   23      | type_spec ID . $@4 LBRAC RBRAC

    LBRAC     reduce using rule 22 ($@4)
    $default  reduce using rule 21 (param)

    $@4  go to state 45


State 37

   14 fun_decl: type_spec ID @3 LPAREN params RPAREN . compound_stmt

    LCURL  shift, and go to state 19

    compound_stmt  go to state 46


State 38

   18 param_list: param_list COMMA . param

    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    type_spec  go to state 28
    param      go to state 47


State 39

   27 local_decl: error var_decl .

    $default  reduce using rule 27 (local_decl)


State 40

    8 var_decl: type_spec . ID $@1 SEMI
   10         | type_spec . ID $@2 LBRAC NUM RBRAC SEMI

    ID  shift, and go to state 48


State 41

   26 local_decl: local_decl var_decl .

    $default  reduce using rule 26 (local_decl)


State 42

   25 compound_stmt: LCURL $@5 local_decl stmt_list . RCURL
   29 stmt_list: stmt_list . stmt

    IF      shift, and go to state 49
    RETURN  shift, and go to state 50
    WHILE   shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    SEMI    shift, and go to state 54
    LPAREN  shift, and go to state 55
    LCURL   shift, and go to state 19
    RCURL   shift, and go to state 56

    compound_stmt  go to state 57
    stmt           go to state 58
    expr_stmt      go to state 59
    select_stmt    go to state 60
    iter_stmt      go to state 61
    return_stmt    go to state 62
    expr           go to state 63
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 43

   30 stmt_list: epsilon .

    $default  reduce using rule 30 (stmt_list)


State 44

   10 var_decl: type_spec ID $@2 LBRAC NUM RBRAC SEMI .

    $default  reduce using rule 10 (var_decl)


State 45

   23 param: type_spec ID $@4 . LBRAC RBRAC

    LBRAC  shift, and go to state 70


State 46

   14 fun_decl: type_spec ID @3 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 14 (fun_decl)


State 47

   18 param_list: param_list COMMA param .

    $default  reduce using rule 18 (param_list)


State 48

    8 var_decl: type_spec ID . $@1 SEMI
   10         | type_spec ID . $@2 LBRAC NUM RBRAC SEMI

    LBRAC     reduce using rule 9 ($@2)
    $default  reduce using rule 7 ($@1)

    $@1  go to state 16
    $@2  go to state 17


State 49

   38 select_stmt: IF . LPAREN expr RPAREN stmt
   39            | IF . LPAREN expr RPAREN stmt ELSE stmt
   40            | IF . LPAREN error RPAREN

    LPAREN  shift, and go to state 71


State 50

   43 return_stmt: RETURN . SEMI
   44            | RETURN . expr SEMI
   45            | RETURN . error SEMI

    error   shift, and go to state 72
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    SEMI    shift, and go to state 73
    LPAREN  shift, and go to state 55

    expr           go to state 74
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 51

   41 iter_stmt: WHILE . LPAREN expr RPAREN stmt
   42          | WHILE . LPAREN error RPAREN

    LPAREN  shift, and go to state 75


State 52

   49 var: ID .
   51    | ID . $@6 LBRAC expr RBRAC
   77 call: ID . $@7 LPAREN args RPAREN

    LPAREN    reduce using rule 76 ($@7)
    LBRAC     reduce using rule 50 ($@6)
    $default  reduce using rule 49 (var)

    $@6  go to state 76
    $@7  go to state 77


State 53

   74 factor: NUM .

    $default  reduce using rule 74 (factor)


State 54

   37 expr_stmt: SEMI .

    $default  reduce using rule 37 (expr_stmt)


State 55

   71 factor: LPAREN . expr RPAREN
   75       | LPAREN . error

    error   shift, and go to state 78
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    expr           go to state 79
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 56

   25 compound_stmt: LCURL $@5 local_decl stmt_list RCURL .

    $default  reduce using rule 25 (compound_stmt)


State 57

   32 stmt: compound_stmt .

    $default  reduce using rule 32 (stmt)


State 58

   29 stmt_list: stmt_list stmt .

    $default  reduce using rule 29 (stmt_list)


State 59

   31 stmt: expr_stmt .

    $default  reduce using rule 31 (stmt)


State 60

   33 stmt: select_stmt .

    $default  reduce using rule 33 (stmt)


State 61

   34 stmt: iter_stmt .

    $default  reduce using rule 34 (stmt)


State 62

   35 stmt: return_stmt .

    $default  reduce using rule 35 (stmt)


State 63

   36 expr_stmt: expr . SEMI

    SEMI  shift, and go to state 80


State 64

   46 expr: var . EQ expr
   48     | var . EQ error
   72 factor: var .

    EQ  shift, and go to state 81

    $default  reduce using rule 72 (factor)


State 65

   47 expr: simple_expr .

    $default  reduce using rule 47 (expr)


State 66

   52 simple_expr: additive_expr . relop additive_expr
   53            | additive_expr .
   54            | additive_expr . relop error
   61 additive_expr: additive_expr . addop term
   63              | additive_expr . error

    error   shift, and go to state 82
    PLUS    shift, and go to state 83
    MINUS   shift, and go to state 84
    LT      shift, and go to state 85
    GT      shift, and go to state 86
    LTEQ    shift, and go to state 87
    GTEQ    shift, and go to state 88
    DOUBEQ  shift, and go to state 89
    NEQ     shift, and go to state 90

    SEMI    reduce using rule 53 (simple_expr)
    COMMA   reduce using rule 53 (simple_expr)
    RPAREN  reduce using rule 53 (simple_expr)
    RBRAC   reduce using rule 53 (simple_expr)

    relop  go to state 91
    addop  go to state 92


State 67

   62 additive_expr: term .
   66 term: term . mulop factor
   68     | term . mulop error

    MULT  shift, and go to state 93
    DIV   shift, and go to state 94

    $default  reduce using rule 62 (additive_expr)

    mulop  go to state 95


State 68

   67 term: factor .

    $default  reduce using rule 67 (term)


State 69

   73 factor: call .

    $default  reduce using rule 73 (factor)


State 70

   23 param: type_spec ID $@4 LBRAC . RBRAC

    RBRAC  shift, and go to state 96


State 71

   38 select_stmt: IF LPAREN . expr RPAREN stmt
   39            | IF LPAREN . expr RPAREN stmt ELSE stmt
   40            | IF LPAREN . error RPAREN

    error   shift, and go to state 97
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    expr           go to state 98
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 72

   45 return_stmt: RETURN error . SEMI

    SEMI  shift, and go to state 99


State 73

   43 return_stmt: RETURN SEMI .

    $default  reduce using rule 43 (return_stmt)


State 74

   44 return_stmt: RETURN expr . SEMI

    SEMI  shift, and go to state 100


State 75

   41 iter_stmt: WHILE LPAREN . expr RPAREN stmt
   42          | WHILE LPAREN . error RPAREN

    error   shift, and go to state 101
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    expr           go to state 102
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 76

   51 var: ID $@6 . LBRAC expr RBRAC

    LBRAC  shift, and go to state 103


State 77

   77 call: ID $@7 . LPAREN args RPAREN

    LPAREN  shift, and go to state 104


State 78

   75 factor: LPAREN error .

    $default  reduce using rule 75 (factor)


State 79

   71 factor: LPAREN expr . RPAREN

    RPAREN  shift, and go to state 105


State 80

   36 expr_stmt: expr SEMI .

    $default  reduce using rule 36 (expr_stmt)


State 81

   46 expr: var EQ . expr
   48     | var EQ . error

    error   shift, and go to state 106
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    expr           go to state 107
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 82

   63 additive_expr: additive_expr error .

    $default  reduce using rule 63 (additive_expr)


State 83

   64 addop: PLUS .

    $default  reduce using rule 64 (addop)


State 84

   65 addop: MINUS .

    $default  reduce using rule 65 (addop)


State 85

   56 relop: LT .

    $default  reduce using rule 56 (relop)


State 86

   57 relop: GT .

    $default  reduce using rule 57 (relop)


State 87

   55 relop: LTEQ .

    $default  reduce using rule 55 (relop)


State 88

   58 relop: GTEQ .

    $default  reduce using rule 58 (relop)


State 89

   59 relop: DOUBEQ .

    $default  reduce using rule 59 (relop)


State 90

   60 relop: NEQ .

    $default  reduce using rule 60 (relop)


State 91

   52 simple_expr: additive_expr relop . additive_expr
   54            | additive_expr relop . error

    error   shift, and go to state 108
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    var            go to state 109
    additive_expr  go to state 110
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 92

   61 additive_expr: additive_expr addop . term

    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    var     go to state 109
    term    go to state 111
    factor  go to state 68
    call    go to state 69


State 93

   69 mulop: MULT .

    $default  reduce using rule 69 (mulop)


State 94

   70 mulop: DIV .

    $default  reduce using rule 70 (mulop)


State 95

   66 term: term mulop . factor
   68     | term mulop . error

    error   shift, and go to state 112
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    var     go to state 109
    factor  go to state 113
    call    go to state 69


State 96

   23 param: type_spec ID $@4 LBRAC RBRAC .

    $default  reduce using rule 23 (param)


State 97

   40 select_stmt: IF LPAREN error . RPAREN

    RPAREN  shift, and go to state 114


State 98

   38 select_stmt: IF LPAREN expr . RPAREN stmt
   39            | IF LPAREN expr . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 115


State 99

   45 return_stmt: RETURN error SEMI .

    $default  reduce using rule 45 (return_stmt)


State 100

   44 return_stmt: RETURN expr SEMI .

    $default  reduce using rule 44 (return_stmt)


State 101

   42 iter_stmt: WHILE LPAREN error . RPAREN

    RPAREN  shift, and go to state 116


State 102

   41 iter_stmt: WHILE LPAREN expr . RPAREN stmt

    RPAREN  shift, and go to state 117


State 103

   51 var: ID $@6 LBRAC . expr RBRAC

    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    expr           go to state 118
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 104

   77 call: ID $@7 LPAREN . args RPAREN

    error   shift, and go to state 119
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    RPAREN  reduce using rule 84 (epsilon)

    expr           go to state 120
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69
    args           go to state 121
    arg_list       go to state 122
    epsilon        go to state 123


State 105

   71 factor: LPAREN expr RPAREN .

    $default  reduce using rule 71 (factor)


State 106

   48 expr: var EQ error .

    $default  reduce using rule 48 (expr)


State 107

   46 expr: var EQ expr .

    $default  reduce using rule 46 (expr)


State 108

   54 simple_expr: additive_expr relop error .

    $default  reduce using rule 54 (simple_expr)


State 109

   72 factor: var .

    $default  reduce using rule 72 (factor)


State 110

   52 simple_expr: additive_expr relop additive_expr .
   61 additive_expr: additive_expr . addop term
   63              | additive_expr . error

    error  shift, and go to state 82
    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84

    SEMI    reduce using rule 52 (simple_expr)
    COMMA   reduce using rule 52 (simple_expr)
    RPAREN  reduce using rule 52 (simple_expr)
    RBRAC   reduce using rule 52 (simple_expr)

    addop  go to state 92


State 111

   61 additive_expr: additive_expr addop term .
   66 term: term . mulop factor
   68     | term . mulop error

    MULT  shift, and go to state 93
    DIV   shift, and go to state 94

    $default  reduce using rule 61 (additive_expr)

    mulop  go to state 95


State 112

   68 term: term mulop error .

    $default  reduce using rule 68 (term)


State 113

   66 term: term mulop factor .

    $default  reduce using rule 66 (term)


State 114

   40 select_stmt: IF LPAREN error RPAREN .

    $default  reduce using rule 40 (select_stmt)


State 115

   38 select_stmt: IF LPAREN expr RPAREN . stmt
   39            | IF LPAREN expr RPAREN . stmt ELSE stmt

    IF      shift, and go to state 49
    RETURN  shift, and go to state 50
    WHILE   shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    SEMI    shift, and go to state 54
    LPAREN  shift, and go to state 55
    LCURL   shift, and go to state 19

    compound_stmt  go to state 57
    stmt           go to state 124
    expr_stmt      go to state 59
    select_stmt    go to state 60
    iter_stmt      go to state 61
    return_stmt    go to state 62
    expr           go to state 63
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 116

   42 iter_stmt: WHILE LPAREN error RPAREN .

    $default  reduce using rule 42 (iter_stmt)


State 117

   41 iter_stmt: WHILE LPAREN expr RPAREN . stmt

    IF      shift, and go to state 49
    RETURN  shift, and go to state 50
    WHILE   shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    SEMI    shift, and go to state 54
    LPAREN  shift, and go to state 55
    LCURL   shift, and go to state 19

    compound_stmt  go to state 57
    stmt           go to state 125
    expr_stmt      go to state 59
    select_stmt    go to state 60
    iter_stmt      go to state 61
    return_stmt    go to state 62
    expr           go to state 63
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 118

   51 var: ID $@6 LBRAC expr . RBRAC

    RBRAC  shift, and go to state 126


State 119

   80 args: error .

    $default  reduce using rule 80 (args)


State 120

   82 arg_list: expr .

    $default  reduce using rule 82 (arg_list)


State 121

   77 call: ID $@7 LPAREN args . RPAREN

    RPAREN  shift, and go to state 127


State 122

   78 args: arg_list .
   81 arg_list: arg_list . COMMA expr
   83         | arg_list . COMMA error

    COMMA  shift, and go to state 128

    $default  reduce using rule 78 (args)


State 123

   79 args: epsilon .

    $default  reduce using rule 79 (args)


State 124

   38 select_stmt: IF LPAREN expr RPAREN stmt .
   39            | IF LPAREN expr RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 129

    $default  reduce using rule 38 (select_stmt)


State 125

   41 iter_stmt: WHILE LPAREN expr RPAREN stmt .

    $default  reduce using rule 41 (iter_stmt)


State 126

   51 var: ID $@6 LBRAC expr RBRAC .

    $default  reduce using rule 51 (var)


State 127

   77 call: ID $@7 LPAREN args RPAREN .

    $default  reduce using rule 77 (call)


State 128

   81 arg_list: arg_list COMMA . expr
   83         | arg_list COMMA . error

    error   shift, and go to state 130
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    LPAREN  shift, and go to state 55

    expr           go to state 131
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 129

   39 select_stmt: IF LPAREN expr RPAREN stmt ELSE . stmt

    IF      shift, and go to state 49
    RETURN  shift, and go to state 50
    WHILE   shift, and go to state 51
    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    SEMI    shift, and go to state 54
    LPAREN  shift, and go to state 55
    LCURL   shift, and go to state 19

    compound_stmt  go to state 57
    stmt           go to state 132
    expr_stmt      go to state 59
    select_stmt    go to state 60
    iter_stmt      go to state 61
    return_stmt    go to state 62
    expr           go to state 63
    var            go to state 64
    simple_expr    go to state 65
    additive_expr  go to state 66
    term           go to state 67
    factor         go to state 68
    call           go to state 69


State 130

   83 arg_list: arg_list COMMA error .

    $default  reduce using rule 83 (arg_list)


State 131

   81 arg_list: arg_list COMMA expr .

    $default  reduce using rule 81 (arg_list)


State 132

   39 select_stmt: IF LPAREN expr RPAREN stmt ELSE stmt .

    $default  reduce using rule 39 (select_stmt)
